<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="contraction_timer_name">Contraction Timer</string>
    <string name="latent_phase_text">Latent Phase</string>
    <string name="active_phase_text">Active Phase</string>
    <string name="transitional_phase_text">Transitional Phase</string>
    <string name="previous_heading_label_text">Previous Contraction</string>
    <string name="predicted_heading_label_text">Predicted Next Contraction</string>
    <string name="start_label_text">Start:</string>
    <string name="length_label_text">Length:</string>
    <string name="interval_label_text">Interval:</string>
    <string name="none_text">--:--</string>
    <string name="countup_label_text">Length of current contraction:</string>
    <string name="countdown_label_text">Time until next contraction:</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="list_contractions_menu_item_text">List Contractions</string>
    <string name="graph_contractions_menu_item_text">Graph Contractions</string>
    <string name="export_contractions_menu_item_text">Export Contractions</string>
    <string name="export_contractions_chooser_title">How would you like to export your contractions data?</string>
    <string name="exported_contractions_subject">My Contractions Data</string>
    <string name="undo_menu_item_text">Undo</string>
    <string name="reset_menu_item_text">Reset</string>
    <string name="confirm_reset_text">Delete all previously recorded contractions data?</string>
    <string name="contraction_list_name">Contractions</string>
    <string name="contraction_graph_name">Contractions</string>
</resources>
