<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView
		style="@style/PhaseHeadingStyle"
		android:id="@+id/phase_label"
		android:hint="@string/latent_phase_text"/>
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableRow>
			<TextView
				style="@style/HeadingStyle"
				android:id="@+id/previous_heading_label"
				android:text="@string/previous_heading_label_text"/>
		</TableRow>
		<TableRow>
			<TextView
				style="@style/TextLabelStyle"
				android:id="@+id/previous_length_label"
				android:text="@string/length_label_text"/>
			<TextView
				style="@style/TextValueStyle"
				android:id="@+id/previous_length_value"
				android:hint="@string/none_text"/>
			<TextView
				style="@style/TextLabelStyle"
				android:id="@+id/previous_period_label"
				android:text="@string/period_label_text"/>
			<TextView
				style="@style/TextValueStyle"
				android:id="@+id/previous_period_value"
				android:hint="@string/none_text"/>
		</TableRow>
		<TableRow>
			<TextView
				style="@style/HeadingStyle"
				android:id="@+id/predicted_heading_label"
				android:text="@string/predicted_heading_label_text"/>
		</TableRow>
		<TableRow>
			<TextView
				style="@style/TextLabelStyle"
				android:id="@+id/predicted_length_label"
				android:text="@string/length_label_text"/>
			<TextView
				style="@style/TextValueStyle"
				android:id="@+id/predicted_length_value"
				android:hint="@string/none_text"/>
			<TextView
				style="@style/TextLabelStyle"
				android:id="@+id/predicted_period_label"
				android:text="@string/period_label_text"/>
			<TextView
				style="@style/TextValueStyle"
				android:id="@+id/predicted_period_value"
				android:hint="@string/none_text"/>
		</TableRow>
	</TableLayout>
	<TextView
		style="@style/SmallTextLabelStyle"
		android:id="@+id/countdown_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="bottom|center_horizontal"
		android:text="@string/countdown_label_text"/>
	<com.alexdroid.contractiontimer.CountdownWidget
		xmlns:app="http://schemas.android.com/apk/res/com.alexdroid.contractiontimer"
		android:id="@+id/countdown_timer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:textStyle="bold"
		android:textSize="45sp"
		android:hint="@string/none_text"/>
	<TextView
		style="@style/TextLabelStyle"
		android:id="@+id/countup_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="bottom|center_horizontal"
		android:text="@string/countup_label_text"/>
	<Chronometer
		android:id="@+id/countup_timer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:textStyle="bold"
		android:textSize="65sp"
		android:hint="@string/none_text"/>
	<ToggleButton
		android:id="@+id/button"
		android:layout_width="180dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_weight="0.5"
		android:gravity="center"
		android:textSize="22sp"
		android:textOff="@string/start_text"
		android:textOn="@string/stop_text"/>
</LinearLayout>

